<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="@dimen/space_10"
    android:paddingHorizontal="@dimen/space_50">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/backDialog"
        android:layout_width="@dimen/space_0"
        android:layout_height="@dimen/space_0"
        android:background="@drawable/back_dialog_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        android:layout_width="@dimen/space_0"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/space_20"
        android:layout_marginTop="@dimen/space_10"
        android:text="@string/quiz"
        android:textColor="@color/black"
        android:textSize="@dimen/size_17"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/backDialog"
        app:layout_constraintStart_toStartOf="@+id/backDialog"
        app:layout_constraintTop_toTopOf="@+id/backDialog" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnYesTodo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/back_dialog_button"
        android:paddingHorizontal="@dimen/space_40"
        android:paddingVertical="@dimen/space_8"
        android:text="@string/yes"
        android:textColor="@color/black"
        android:textSize="@dimen/size_17"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/btnNoTodo"
        app:layout_constraintEnd_toEndOf="@+id/tvTitle"
        app:layout_constraintTop_toTopOf="@+id/btnNoTodo" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnNoTodo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_20"
        android:background="@drawable/back_dialog_button"
        android:paddingHorizontal="@dimen/space_40"
        android:paddingVertical="@dimen/space_8"
        android:layout_marginBottom="@dimen/space_10"
        android:text="@string/no"
        android:textColor="@color/black"
        android:textSize="@dimen/size_17"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/backDialog"
        app:layout_constraintStart_toStartOf="@+id/tvTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>