<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context=".presentation.ui.newTodoList.CreateNewTodoListFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLogin"
        android:layout_width="@dimen/space_0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_50"
        android:text="@string/create_new_todo_list"
        android:textColor="@color/black"
        android:textSize="@dimen/size_25"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/glEnd"
        app:layout_constraintStart_toEndOf="@+id/glStart"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edName"
        android:layout_width="@dimen/space_0"
        android:layout_height="@dimen/space_50"
        android:layout_marginTop="@dimen/space_40"
        android:background="@drawable/back_edit"
        android:hint="@string/list_name"
        android:inputType="textCapWords"
        android:paddingHorizontal="@dimen/space_20"
        android:layout_marginEnd="@dimen/space_20"
        app:layout_constraintEnd_toStartOf="@+id/btnAdd"
        app:layout_constraintStart_toEndOf="@+id/glStart"
        app:layout_constraintTop_toBottomOf="@+id/tvLogin" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/back_dialog_button"
        android:paddingHorizontal="@dimen/space_35"
        android:paddingVertical="@dimen/space_8"
        android:text="@string/add"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="@dimen/size_17"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/edName"
        app:layout_constraintEnd_toStartOf="@+id/glEnd"
        app:layout_constraintTop_toTopOf="@+id/edName" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/backRecyclerView"
        android:layout_width="@dimen/space_0"
        android:layout_height="@dimen/space_0"
        android:layout_marginTop="@dimen/space_30"
        android:layout_marginBottom="@dimen/space_20"
        android:background="@drawable/rv_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/glEnd"
        app:layout_constraintStart_toEndOf="@+id/glStart"
        app:layout_constraintTop_toBottomOf="@+id/btnAdd"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvUserList"
        android:layout_width="@dimen/space_0"
        android:layout_height="@dimen/space_0"
        android:layout_margin="@dimen/space_10"
        tools:listitem="@layout/item_item"
        app:layout_constraintBottom_toBottomOf="@id/backRecyclerView"
        app:layout_constraintTop_toTopOf="@id/backRecyclerView"
        app:layout_constraintStart_toStartOf="@id/backRecyclerView"
        app:layout_constraintEnd_toEndOf="@id/backRecyclerView"/>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/space_30" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/space_30" />


</androidx.constraintlayout.widget.ConstraintLayout>